# icarus

./: Makefile  README.md  pyproject.toml
paper-trading/: notes.md
paper-trading/src/: app.py  constants.py  discover_markets.py  helpers.py  inventory.py  market.py  market_state.py  models.py  (+5 more)
scripts/: _drift_predictor.py  _hyperliquid_spot.py  adverse_selection_classifier.py  analyze_fill_regimes.py  analyze_ticker_poll.py  basis_mean_reversion_backtest.py  basis_vs_anchor_plot.py  capture_filter_eval.py  dex_active_lp.py  dex_find_pools.py  dex_lp_backtest.py  dex_pull_cex_ref.py  dex_pull_swaps.py  dex_regime_backtest.py  dex_toxic_classifier.py  dex_toxic_features.py  dex_vol_gate.py  evaluate_filter_capture.py  fair_value_sanity.py  filter_innovation_mae.py  fit_kalman_drift.py  fit_microstructure_drift.py  hourly_leadlag_alpha.py  hyperliquid_funding_analysis.py  live_drift_plot.py  live_fair_value_plot.py  live_measurements.py  live_paper_trade_plot.py  measurement_sanity.py  multi_venue_basis_fair_value.py  multi_venue_basis_fair_value_plot.py  multi_venue_fair_value.py  multi_venue_fair_value_plot.py  observation_sanity.py  pycheck  run_capture_daemon.sh  simulate_basis_maker.py  simulate_basis_taker.py  socket_sanity.py  thin_alt_live_ticker_poll.py  (+6 more)
tests/: test_base_socket.py  test_exchange_sockets.py  test_fair_value_combiner.py  test_fair_value_variance.py  test_fair_value_weighting.py  test_kalman_1d.py  test_measurement_engine.py  test_measurement_normalizers.py  test_measurement_repr.py  test_orderbook_builder.py  test_venue_basis_kalman_filter.py
(+42 files in other folders)
