[tool.poetry]
name = "icarus"
version = "0.1.0"
description = "A fun Python project."
authors = ["Cory Wagamaneure"]
readme = "README.md"
packages = [{ include = "icarus", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^15.0.1"
numpy = "^2.4.4"
scikit-learn = "^1.8.0"
lightgbm = "^4.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.13.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.poetry.scripts]
icarus = "icarus.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
packages = ["icarus"]
mypy_path = "src"
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["websockets"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
